test/files/invalid/struct_field_default.fbs
struct Foo {
  x: uint8 = 1;
}